--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -641,15 +641,45 @@ ul.subrecord-form-list {
 }
 
 .subrecord-add-as-you-go-actions {
-  @asyougotransition: opacity linear .4s, height linear .4s, padding linear .4s;
+  @asyougotransition: opacity linear .4s 1s, height linear .4s 1s, padding linear .4s 1s;
   .transition(@asyougotransition);
   text-align: center;
   width: 100%;
-  border-top: 1px solid #EEE;
-  .opacity(40);
-  height: 0;
+  .opacity(0);
+  height: 30px;
   overflow: hidden;
-  padding: 0 10px;
+  border-top: 1px solid transparent;
+
+  a {
+    .transition(background-color linear .1s);
+    font-size: 40px;
+    display: inline-block;
+    text-shadow: 0px 1px 1px #666;
+    opacity: 1;
+    color: #CCC;
+    height: 30px;
+    text-decoration: none;
+
+    &.has-label {
+      font-size: 14px;
+      color: #999;
+      text-shadow: 0 1px 1px #FFF;
+      padding-top: 6px;
+    }
+
+    &:hover, &:focus {
+      .transition(background-color linear .1s);
+      background-color: @btnBackgroundHighlight;
+      #gradient > .vertical(@btnBackground, @btnBackgroundHighlight);
+    }
+
+    &:active {
+      background-image: none;
+      outline: 0;
+      background-color: #EEE;
+      .box-shadow(~"inset 0 1px 2px rgba(0,0,0,.15), 0 1px 2px rgba(0,0,0,.05)");
+    }
+  }
 }
 
 .subrecord-form:hover .subrecord-add-as-you-go-actions,
@@ -657,11 +687,10 @@ ul.subrecord-form-list {
   @asyougotransition: opacity linear .2s, height linear .2s, padding linear .2s;
   .transition(@asyougotransition);
   .opacity(100);
-  height: 25px;
-  padding: 10px;
+  border-top: 1px solid #EEE;
 }
 
-.subrecord-form-fields > .note-form-container > li > .subrecord-form-fields {
+.subrecord-form-fields > .selected-container > .subrecord-form-fields {
   border-left: none;
   border-right: none;
   border-bottom: none;
