--- a/frontend/app/views/related_agents/_template.html.erb
+++ b/frontend/app/views/related_agents/_template.html.erb
@@ -1,5 +1,33 @@
 <% render :partial => "dates/template" %>
 
+<% define_template "related_agents_selector" do |form| %>
+  <div class="subrecord-form-fields">
+    <div class="control-group">
+      <label class="control-label"><%= I18n.t("related_agent.relationship_type") %></label>
+      <div class="controls">
+        <select class="related-agent-type">
+          <option value="related_agents_type_nil"></option>
+          <% jsonmodel_definition(@agent.agent_type).allowable_types_for("related_agents").sort_by {|type| I18n.t("#{type}._html.singular")}.each do |type| %>
+            <option value="<%= type %>"><%= I18n.t("#{type}._html.singular") %></option>
+          <% end %>
+        </select>
+      </div>
+    </div>
+    <div class="selected-container">
+      <% form.emit_template("related_agents_type_nil") %>
+    </div>
+  </div>
+<% end %>
+
+<% define_template "related_agents_type_nil" do |form| %>
+  <div class="inline-subform">
+    <div class="control-group">
+      <div class="control-label"></div>
+      <div class="controls"><%= I18n.t("related_agent._html.messages.select_a_type") %></div>
+    </div>
+  </div>
+<% end %>
+
 <% jsonmodel_definition(@agent.agent_type).allowable_types_for("related_agents").each do |relationship_type| %>
   <% define_template "#{relationship_type}", jsonmodel_definition(relationship_type.intern) do |form, opts = {}| %>
     <div class="subrecord-form-fields">
