--- a/frontend/app/views/repositories/_sidebar.html.erb
+++ b/frontend/app/views/repositories/_sidebar.html.erb
@@ -1,6 +1,7 @@
 <div id="archivesSpaceSidebar">
   <ul class="nav nav-list as-nav-list">
     <li><a href="#all_fields"><%= I18n.t("repository._html.section.all_fields") %> <span class="icon-chevron-right"></span></a></li>
+    <li><a href="#agent_contact"><%= I18n.t("agent_contact._html.plural") %> <span class="icon-chevron-right"></span></a></li>
 
     <% if not controller.action_name === "show" %>
       <li class="form-actions">
