--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -130,6 +130,12 @@ form .control-group {
   margin: 2px 6px 0 0;
 }
 
+.subrecord-form.error {
+  > .subrecord-form-heading {
+    color: #b94a48;
+  }
+}
+
 section h3 {
   .dropdown-menu {
 
