--- a/frontend/app/views/archival_objects/_show_inline.html.erb
+++ b/frontend/app/views/archival_objects/_show_inline.html.erb
@@ -6,7 +6,7 @@
     <%= render :partial => "toolbar" %>
     <div class="record-pane">
       <%= readonly_context :archival_object, @archival_object do |readonly| %>
-        <h2><%= @archival_object.title %> <span class="label label-info"><%= I18n.t("archival_object._html.singular") %></span></h2>
+        <h2><%= @archival_object.label %> <span class="label label-info"><%= I18n.t("archival_object._html.singular") %></span></h2>
         <%= render :partial => "shared/flash_messages" %>
         <section id="basic_information">
           <h3><%= I18n.t("archival_object._html.section.basic_information") %></h3>
