--- a/frontend/app/views/archival_objects/_edit_inline.html.erb
+++ b/frontend/app/views/archival_objects/_edit_inline.html.erb
@@ -14,5 +14,18 @@
         </div>
       </div>
     </div>
+    <% if @refresh_tree_node
+        node_data = {
+          'id' => @archival_object.id,
+          'title' => @archival_object.label,
+          'level' => @archival_object.level==='otherlevel' ? @archival_object.other_level : I18n.t("enumerations.archival_record_level.#{@archival_object.level}", :default => @archival_object.level),
+          'jsonmodel_type' => @archival_object.jsonmodel_type,
+          'replace_new_node' => controller.action_name === 'create'
+        }
+    %>
+      <script>
+        AS.refreshTreeNode(<%= node_data.to_json.html_safe %>);
+      </script>
+    <% end %>
   <% end %>
 <% end %>
