--- a/frontend/app/views/resources/_edit_inline.html.erb
+++ b/frontend/app/views/resources/_edit_inline.html.erb
@@ -14,5 +14,19 @@
          </div>
       </div>
     </div>
+
+    <% if @refresh_tree_node
+         node_data = {
+           'id' => @resource.id,
+           'title' => @resource.title,
+           'level' => @resource.level==='otherlevel' ? @resource.other_level : I18n.t("enumerations.archival_record_level.#{@resource.level}", :default => @resource.level),
+           'jsonmodel_type' => @resource.jsonmodel_type,
+           'replace_new_node' => false
+         }
+    %>
+      <script>
+        AS.refreshTreeNode(<%= node_data.to_json.html_safe %>);
+      </script>
+    <% end %>
   <% end %>
 <% end %>
