WIP introduce filter and sorting to the linker browse modal -- first attempt at the agent linker seemingly working...
WIP clean up the agent linker to show selected and allow clicking of the row to select input

Fix linker.. it needs both a url for the typeahead (json) and a different for the browse search (returns HTML); I18n the linker strings; Bring across all linkers to use the new browse feature; Disable linkers opened in the create modal (they currently don't play nice); Introduce a readonly 'title' property on agents which offers their first name's sort_name (offers quick access to the linker);

mend

--- a/frontend/app/assets/stylesheets/archivesspace/tables.less
+++ b/frontend/app/assets/stylesheets/archivesspace/tables.less
@@ -26,6 +26,9 @@ table {
   tr.deleted td {
     background-color: @errorBackground !important;
   }
+  tr.selected td {
+    background-color: @successBackground !important;
+  }
   dl {
     margin: 0;
   }
