--- a/frontend/app/views/resources/_linker.html.erb
+++ b/frontend/app/views/resources/_linker.html.erb
@@ -17,7 +17,8 @@
             data-label_plural="<%= I18n.t("resource._html.plural") %>"
             data-path="<%= form.path %>"
             data-name="ref"
-            data-url="<%= url_for :controller => :search, :action => :do_search, :format => :json, :exclude => exclude_ids %>"
+            data-url="<%= url_for :controller => :search, :action => :do_search, :format => :json %>"
+            data-browse-url="<%= url_for :controller => :search, :action => :do_search, :format => :js, :facets => SearchResultData.RESOURCE_FACETS, :exclude => exclude_ids %>"
             data-selected="<%= selected_json %>"
             data-format_property="title"
             data-multiplicity="one"
