--- a/frontend/app/views/search/_filter.html.erb
+++ b/frontend/app/views/search/_filter.html.erb
@@ -2,7 +2,7 @@
   <div class="well">
     <h5>
       <%= I18n.t "search_results.filtered_by" %>
-      <%= link_to I18n.t("search_results.clear_all"), {:controller => controller.controller_name, :action => controller.action_name}, :class => "btn btn-mini pull-right" %>
+      <%= link_to I18n.t("search_results.clear_all"), params_for_search({"q" => "", "filter" => []}), :class => "btn btn-mini pull-right" %>
     </h5>
     <ul>
     <% if @search_data.query? %>
