--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -36,16 +36,26 @@ h2 > .label {
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5), 0 0 30px rgba(255, 255, 255, 0.125);
 }
 
-.modal > form {
-  margin-bottom: 0;
-}
+.modal {
+  > form {
+    margin-bottom: 0;
+  }
 
-.modal .modal-footer {
-  text-align: left;
-}
+  &.container {
+    margin-left: -585px;
 
-.modal .modal-footer .btn-cancel {
-  float: right;
+    .modal-body {
+      max-height: none;
+    }
+  }
+
+  .modal-footer {
+    text-align: left;
+
+    .btn-cancel {
+      float: right;
+    }
+  }
 }
 
 .btn-toolbar >.btn-group + .btn-group {
