--- a/frontend/app/views/accessions/_linker.html.erb
+++ b/frontend/app/views/accessions/_linker.html.erb
@@ -16,6 +16,7 @@
             data-path="<%= form.path %>"
             data-name="ref"
             data-url="<%= url_for :controller => :search, :action => :do_search, :format => :json %>"
+            data-browse-url="<%= url_for :controller => :search, :action => :do_search, :format => :js, :facets => SearchResultData.ACCESSION_FACETS %>"
             data-selected="<%= selected_json %>"
             data-format_property="title"
             data-multiplicity="one"
