--- a/frontend/app/views/agents/_linker.html.erb
+++ b/frontend/app/views/agents/_linker.html.erb
@@ -2,10 +2,10 @@
    if form.obj['ref'].blank?
      selected_json = "{}"
    else
-     selected = form.obj['_resolved'].clone
-     selected['uri'] ||= form.obj['ref']
-     selected_json =  selected.to_json
+     selected_json = form.obj['_resolved'].to_json
    end
+
+   exclude_ids = [] if exclude_ids.blank?
 
    linkable_types = defined?(allowed_types) ? allowed_types : ["agent"]
    creatable_types = defined?(allowed_types) ? allowed_types : ["agent_person", "agent_family", "agent_corporate_entity", "agent_software"]
@@ -21,10 +21,11 @@
              data-name="ref"
              data-path="<%= form.path %>"
              data-url="<%= url_for :controller => :search, :action => :do_search, :format => :json %>"
+             data-browse-url="<%= url_for :controller => :search, :action => :do_search, :format => :js, :facets => SearchResultData.AGENT_FACETS %>"
              data-selected="<%= selected_json %>"
              data-multiplicity="one"
-             data-format_template="names[0].sort_name"
              data-types='<%= linkable_types.to_json %>'
+             data-exclude='<%= exclude_ids.to_json %>'
       />
       <div class="btn-group pull-right">
         <a class="btn dropdown-toggle last" data-toggle="dropdown" href="javascript:void(0);"><span class="caret"></span></a>
