--- a/frontend/app/views/digital_objects/_linker.html.erb
+++ b/frontend/app/views/digital_objects/_linker.html.erb
@@ -16,6 +16,7 @@
              data-path="<%= form.path %>"
              data-name="ref"
              data-url="<%= url_for :controller => :search, :action => :do_search, :format => :json %>"
+             data-browse-url="<%= url_for :controller => :search, :action => :do_search, :format => :js, :facets => SearchResultData.DIGITAL_OBJECT_FACETS %>"
              data-selected="<%= selected_json %>"
              data-format_property="title"
              data-multiplicity="one"
@@ -25,7 +26,6 @@
         <a class="btn dropdown-toggle last" data-toggle="dropdown" href="javascript:void(0);"><span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="javascript:void(0);" class="linker-browse-btn"><%= I18n.t("actions.browse") %></a></li>
-          <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :digital_objects, :action => :new, :inline => true %>" class="linker-create-btn"><%= I18n.t("actions.create") %></a></li>
         </ul>
       </div>
     </div>
