--- a/frontend/app/views/events/_record_linker.html.erb
+++ b/frontend/app/views/events/_record_linker.html.erb
@@ -8,7 +8,7 @@
 <div class="control-group">
   <label class="control-label"><%= I18n.t("linked_record.ref") %></label>
   <div class="controls">
-    <div class="linker-wrapper">
+    <div class="input-append linker-wrapper">
       <input type="text" class="linker"
              id="<%= form.id_for("ref") %>"
              data-label="<%= I18n.t("linked_record.ref") %>"
@@ -16,11 +16,19 @@
              data-name="ref"
              data-path="<%= form.path %>"
              data-url="<%= url_for :controller => :search, :action => :do_search, :format => :json %>"
+             data-browse-url="<%= url_for :controller => :search, :action => :do_search, :format => :js, :facets => (SearchResultData.ACCESSION_FACETS+SearchResultData.RESOURCE_FACETS+SearchResultData.DIGITAL_OBJECT_FACETS).uniq %>"
              data-selected="<%= selected_json %>"
              data-multiplicity="one"
              data-format_template="title"
              data-types='["accession", "resource", "digital_object"]'
       />
+      <div class="btn-group dropdown pull-right">
+        <a class="btn dropdown-toggle last" data-toggle="dropdown" href="javascript:void(0);"><span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="javascript:void(0);" class="linker-browse-btn"><%= I18n.t("actions.browse") %></a></li>
+        </ul>
+      </div>
+    </div>
     </div>
   </div>
 </div>
