Refactor terms subrecord to use the subrecord.js instead of its own templates

--- a/frontend/app/views/linked_agents/_template.html.erb
+++ b/frontend/app/views/linked_agents/_template.html.erb
@@ -16,7 +16,7 @@
       <%= render :partial => "agents/linker", :locals => {:form => form} %>
 
       <div class="agent-terms" style="display: none">
-        <% form.emit_template("terms") %>
+        <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "terms"} %>
       </div>
 
     </div>
